--- a/Pages/Company/Details.cshtml
+++ b/Pages/Company/Details.cshtml
@@ -52,6 +52,12 @@
                                 @Html.DisplayFor(model => model.Company.EnrollmentDate)
                             </dd>
                             <dt class="col-sm-2">
+                                @Html.DisplayNameFor(model => model.Company.Thematics)
+                            </dt>
+                            <dd class="col-sm-10">
+                                @Html.DisplayFor(model => model.Company.Thematics)
+                            </dd>
+                            <dt class="col-sm-2">
                                 @Html.DisplayNameFor(model => model.Company.Bonus)
                             </dt>
                             <dd class="col-sm-10">
@@ -132,9 +138,9 @@
                     <div class="form-group">
                         <form>
                             <span>@Localizer["Имя:"]</span><br>
-                            <input type="text" id="name"><br>
+                            <input type="text" id="name" class="col-sm-8"><br>
                             <span>@Localizer["Комментарий:"]</span><br>
-                            <textarea id="comment" class="w-auto p-3"></textarea><br>
+                            <textarea id="comment" class="col-sm-12"></textarea><br>
                             <button id="button">@Localizer["Отправить"]</button>
                         </form>
                     </div>
