--- a/Pages/Company/Create.cshtml
+++ b/Pages/Company/Create.cshtml
@@ -20,7 +20,7 @@
                     <h4>@Localizer["Компанию"]</h4>
                     <hr />
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-12">
                             <form method="post">
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <div class="form-group">
@@ -39,6 +39,21 @@
                                     <span asp-validation-for="Company.EnrollmentDate" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
+                                    <label asp-for="Company.Thematics" class="control-label">@Localizer["Тематика:"]</label>
+                                    @*<input asp-for="Company.Thematics" class="form-control" />*@
+                                <select asp-for="Company.Thematics" class="form-control" aria-label="Default select example">
+                                    <option selected>@Localizer["Выберите тематику вашей компании"]</option>
+                                    <option value="1">@Localizer["Образование"]</option>
+                                    <option value="2">@Localizer["Животные"]</option>
+                                    <option value="3">@Localizer["Права человека"]</option>
+                                    <option value="4">@Localizer["Природа"]</option>
+                                    <option value="5">@Localizer["Культура"]</option>
+                                    <option value="6">@Localizer["Игра"]</option>
+                                    <option value="7">@Localizer["Другое"]</option>
+                                </select>
+                                    <span asp-validation-for="Company.Thematics" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
                                     <label asp-for="Company.Bonus" class="control-label">@Localizer["Бонус:"]</label>
                                     <input asp-for="Company.Bonus" class="form-control" />
                                     <span asp-validation-for="Company.Bonus" class="text-danger"></span>
@@ -53,14 +68,14 @@
                                     <input asp-for="Company.Images" class="form-control" />
                                     <span asp-validation-for="Company.Images" class="text-danger"></span>
                                     @*<div id="drop-area">
-                                        <div class="my-form">
-                                            <label asp-for="Company.Images" class="control-label"></label>
-                                            <p>@Localizer["Загрузите изображения с помощью диалога выбора файлов или перетащив нужные изображения в выделенную область"]</p>
-                                            <input asp-for="Company.Images" class="form-control" type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
-                                            <span asp-validation-for="Company.Images" class="text-danger"></span>
-                                            <label class="button" for="UploadFileSample.cs">Выбрать изображения</label>
-                                        </div>
-                                    </div>*@
+                <div class="my-form">
+                    <label asp-for="Company.Images" class="control-label"></label>
+                    <p>@Localizer["Загрузите изображения с помощью диалога выбора файлов или перетащив нужные изображения в выделенную область"]</p>
+                    <input asp-for="Company.Images" class="form-control" type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
+                    <span asp-validation-for="Company.Images" class="text-danger"></span>
+                    <label class="button" for="UploadFileSample.cs">Выбрать изображения</label>
+                </div>
+            </div>*@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="Company.Video" class="control-label">@Localizer["Видео:"]</label>
@@ -74,7 +89,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="Company.News" class="control-label">@Localizer["Новости:"]</label>
-                                    <textarea asp-for="Company.News" class="form-control" ></textarea>
+                                    <textarea asp-for="Company.News" class="form-control"></textarea>
                                     <span asp-validation-for="Company.News" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
