--- a/Pages/Company/Delete.cshtml
+++ b/Pages/Company/Delete.cshtml
@@ -41,6 +41,12 @@
                                 @Html.DisplayFor(model => model.Company.EnrollmentDate)
                             </dd>
                             <dt class="col-sm-2">
+                                @Html.DisplayNameFor(model => model.Company.Thematics)
+                            </dt>
+                            <dd class="col-sm-10">
+                                @Html.DisplayFor(model => model.Company.Thematics)
+                            </dd>
+                            <dt class="col-sm-2">
                                 @Html.DisplayNameFor(model => model.Company.Bonus)
                             </dt>
                             <dd class="col-sm-10">
