--- a/Pages/Ads/Create.cshtml
+++ b/Pages/Ads/Create.cshtml
@@ -21,22 +21,22 @@
                         <form method="post">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-group">
-                                <label asp-for="Ads.AdsID" class="control-label">@Localizer["Номер:"]</label>
+                                <h5 asp-for="Ads.AdsID" class="control-label">@Localizer["Номер:"]</h5>
                                 <input asp-for="Ads.AdsID" class="form-control" />
                                 <span asp-validation-for="Ads.AdsID" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Ads.Title" class="control-label">@Localizer["Название:"]</label>
+                                <h5 asp-for="Ads.Title" class="control-label">@Localizer["Название:"]</h5>
                                 <input asp-for="Ads.Title" class="form-control" />
                                 <span asp-validation-for="Ads.Title" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Ads.Tags" class="control-label">@Localizer["Тэги:"]</label>
+                                <h5 asp-for="Ads.Tags" class="control-label">@Localizer["Тэги:"]</h5>
                                 <input asp-for="Ads.Tags" class="form-control" />
                                 <span asp-validation-for="Ads.Tags" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Ads.Department" class="control-label">@Localizer["Описание:"]</label>
+                                <h5 asp-for="Ads.Department" class="control-label">@Localizer["Описание:"]</h5>
                                 <select asp-for="Ads.DepartmentID" class="form-control"
                                         asp-items="@Model.DepartmentNameSL">
                                     <option value="">Выберите Отдел</option>
@@ -44,7 +44,7 @@
                                 <span asp-validation-for="Ads.DepartmentID" class="text-danger" />
                             </div>
                             <div class="form-group">
-                                <input type="submit" value="Create" class="btn btn-primary" />
+                                <input type="submit" value="Create" class="btn btn-primary btn-lg btn-block" />
                             </div>
                         </form>
                     </div>
