--- a/Pages/Ads/Edit.cshtml
+++ b/Pages/Ads/Edit.cshtml
@@ -22,27 +22,27 @@
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <input type="hidden" asp-for="Ads.AdsID" />
                             <div class="form-group">
-                                <label asp-for="Ads.AdsID" class="control-label">@Localizer["Номер:"]</label>
+                                <h5 asp-for="Ads.AdsID" class="control-label">@Localizer["Номер:"]</h5>
                                 <div>@Html.DisplayFor(model => model.Ads.AdsID)</div>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Ads.Title" class="control-label">@Localizer["Название:"]</label>
+                                <h5 asp-for="Ads.Title" class="control-label">@Localizer["Название:"]</h5>
                                 <input asp-for="Ads.Title" class="form-control" />
                                 <span asp-validation-for="Ads.Title" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Ads.Tags" class="control-label">@Localizer["Тэги:"]</label>
+                                <h5 asp-for="Ads.Tags" class="control-label">@Localizer["Тэги:"]</h5>
                                 <input asp-for="Ads.Tags" class="form-control" />
                                 <span asp-validation-for="Ads.Tags" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Ads.Department" class="control-label">@Localizer["Описание:"]</label>
+                                <h5 asp-for="Ads.Department" class="control-label">@Localizer["Описание:"]</h5>
                                 <select asp-for="Ads.DepartmentID" class="form-control"
                                         asp-items="@Model.DepartmentNameSL"></select>
                                 <span asp-validation-for="Ads.DepartmentID" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <input type="submit" value="Save" class="btn btn-primary" />
+                                <input type="submit" value="Save" class="btn btn-primary btn-lg btn-block" />
                             </div>
                         </form>
                     </div>
