--- a/Pages/Company/Create.cshtml
+++ b/Pages/Company/Create.cshtml
@@ -24,23 +24,22 @@
                             <form method="post">
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Title" class="control-label">@Localizer["Название:"]</label>
+                                    <h5 asp-for="Company.Title" class="control-label">@Localizer["Название:"]</h5>
                                     <input asp-for="Company.Title" class="form-control" />
                                     <span asp-validation-for="Company.Title" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Rating" class="control-label">@Localizer["Рейтинг:"]</label>
+                                    <h5 asp-for="Company.Rating" class="control-label">@Localizer["Рейтинг:"]</h5>
                                     <input asp-for="Company.Rating" class="form-control" />
                                     <span asp-validation-for="Company.Rating" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.EnrollmentDate" class="control-label">@Localizer["Дата Регистрации:"]</label>
+                                    <h5 asp-for="Company.EnrollmentDate" class="control-label">@Localizer["Дата Регистрации:"]</h5>
                                     <input asp-for="Company.EnrollmentDate" class="form-control" />
                                     <span asp-validation-for="Company.EnrollmentDate" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Thematics" class="control-label">@Localizer["Тематика:"]</label>
-                                    @*<input asp-for="Company.Thematics" class="form-control" />*@
+                                    <h5 asp-for="Company.Thematics" class="control-label">@Localizer["Тематика:"]</h5>
                                 <select asp-for="Company.Thematics" class="form-control" aria-label="Default select example">
                                     <option selected>@Localizer["Выберите тематику вашей компании"]</option>
                                     <option value="1">@Localizer["Образование"]</option>
@@ -54,17 +53,17 @@
                                     <span asp-validation-for="Company.Thematics" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Bonus" class="control-label">@Localizer["Бонус:"]</label>
+                                    <h5 asp-for="Company.Bonus" class="control-label">@Localizer["Бонус:"]</h5>
                                     <input asp-for="Company.Bonus" class="form-control" />
                                     <span asp-validation-for="Company.Bonus" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Description" class="control-label">@Localizer["Описание:"]</label>
+                                    <h5 asp-for="Company.Description" class="control-label">@Localizer["Описание:"]</h5>
                                     <textarea asp-for="Company.Description" class="form-control"></textarea>
                                     <span asp-validation-for="Company.Description" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Images" class="control-label">@Localizer["Изобраения:"]</label>
+                                    <h5 asp-for="Company.Images" class="control-label">@Localizer["Изобраения:"]</h5>
                                     <input asp-for="Company.Images" class="form-control" />
                                     <span asp-validation-for="Company.Images" class="text-danger"></span>
                                     @*<div id="drop-area">
@@ -78,27 +77,27 @@
             </div>*@
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Video" class="control-label">@Localizer["Видео:"]</label>
+                                    <h5 asp-for="Company.Video" class="control-label">@Localizer["Видео:"]</h5>
                                     <input asp-for="Company.Video" class="form-control" />
                                     <span asp-validation-for="Company.Video" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Topic" class="control-label">@Localizer["Тема:"]</label>
+                                    <h5 asp-for="Company.Topic" class="control-label">@Localizer["Тема:"]</h5>
                                     <input asp-for="Company.Topic" class="form-control" />
                                     <span asp-validation-for="Company.Topic" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.News" class="control-label">@Localizer["Новости:"]</label>
+                                    <h5 asp-for="Company.News" class="control-label">@Localizer["Новости:"]</h5>
                                     <textarea asp-for="Company.News" class="form-control"></textarea>
                                     <span asp-validation-for="Company.News" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Price" class="control-label">@Localizer["Цена:"]</label>
+                                    <h5 asp-for="Company.Price" class="control-label">@Localizer["Цена:"]</h5>
                                     <input asp-for="Company.Price" class="form-control" />
                                     <span asp-validation-for="Company.Price" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Tags" class="control-label">@Localizer["Тэги::"]</label>
+                                    <h5 asp-for="Company.Tags" class="control-label">@Localizer["Тэги::"]</h5>
                                     <input asp-for="Company.Tags" class="form-control" />
                                     <span asp-validation-for="Company.Tags" class="text-danger"></span>
                                 </div>
