--- a/Pages/Company/Edit.cshtml
+++ b/Pages/Company/Edit.cshtml
@@ -23,27 +23,27 @@
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <input type="hidden" asp-for="Company.ID" />
                                 <div class="form-group">
-                                    <label asp-for="Company.Title" class="control-label">Название:</label>
+                                    <h5 asp-for="Company.Title" class="control-label">Название:</h5>
                                     <input asp-for="Company.Title" class="form-control" />
                                     <span asp-validation-for="Company.Title" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Rating" class="control-label">Рейтинг:</label>
+                                    <h5 asp-for="Company.Rating" class="control-label">Рейтинг:</h5>
                                     <input asp-for="Company.Rating" class="form-control" />
                                     <span asp-validation-for="Company.Rating" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.EnrollmentDate" class="control-label">Дата Регистрации:</label>
+                                    <h5 asp-for="Company.EnrollmentDate" class="control-label">Дата Регистрации:</h5>
                                     <input asp-for="Company.EnrollmentDate" class="form-control" />
                                     <span asp-validation-for="Company.EnrollmentDate" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Thematics" class="control-label">Тематика:</label>
+                                    <h5 asp-for="Company.Thematics" class="control-label">Тематика:</h5>
                                     <input asp-for="Company.Thematics" class="form-control" />
                                     <span asp-validation-for="Company.Thematics" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Bonus" class="control-label">Бонус:</label>
+                                    <h5 asp-for="Company.Bonus" class="control-label">Бонус:</h5>
                                 <select asp-for="Company.Thematics" class="form-control" aria-label="Default select example">
                                     <option selected>@Localizer["Выберите тематику вашей компании"]</option>
                                     <option value="1">@Localizer["Образование"]</option>
@@ -57,42 +57,42 @@
                                     <span asp-validation-for="Company.Bonus" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Description" class="control-label">Описание:</label>
+                                    <h5 asp-for="Company.Description" class="control-label">Описание:</h5>
                                     <textarea asp-for="Company.Description" class="form-control"></textarea>
                                     <span asp-validation-for="Company.Description" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Images" class="control-label">Изобраение:</label>
+                                    <h5 asp-for="Company.Images" class="control-label">Изобраение:</h5>
                                     <input asp-for="Company.Images" class="form-control" />
                                     <span asp-validation-for="Company.Images" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Video" class="control-label">Видео:</label>
+                                    <h5 asp-for="Company.Video" class="control-label">Видео:</h5>
                                     <input asp-for="Company.Video" class="form-control" />
                                     <span asp-validation-for="Company.Video" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Topic" class="control-label">Тема:</label>
+                                    <h5 asp-for="Company.Topic" class="control-label">Тема:</h5>
                                     <input asp-for="Company.Topic" class="form-control" />
                                     <span asp-validation-for="Company.Topic" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.News" class="control-label">Новости:</label>
+                                    <h5 asp-for="Company.News" class="control-label">Новости:</h5>
                                     <textarea asp-for="Company.News" class="form-control"></textarea>
                                     <span asp-validation-for="Company.News" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Price" class="control-label">Цена:</label>
+                                    <h5 asp-for="Company.Price" class="control-label">Цена:</h5>
                                     <input asp-for="Company.Price" class="form-control" />
                                     <span asp-validation-for="Company.Price" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="Company.Tags" class="control-label">Тэги:</label>
+                                    <h5 asp-for="Company.Tags" class="control-label">Тэги:</h5>
                                     <input asp-for="Company.Tags" class="form-control" />
                                     <span asp-validation-for="Company.Tags" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <input type="submit" value="Save" class="btn btn-primary" />
+                                    <input type="submit" value="Save" class="btn btn-primary btn-lg btn-block" />
                                 </div>
                             </form>
                         </div>
