--- a/Pages/Departments/Create.cshtml
+++ b/Pages/Departments/Create.cshtml
@@ -21,32 +21,32 @@
                         <form method="post">
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-group">
-                                <label asp-for="Department.Name" class="control-label">@Localizer["Имя:"]</label>
+                                <h5 asp-for="Department.Name" class="control-label">@Localizer["Имя:"]</h5>
                                 <input asp-for="Department.Name" class="form-control" />
                                 <span asp-validation-for="Department.Name" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Department.Budget" class="control-label">@Localizer["Бюджет:"]</label>
+                                <h5 asp-for="Department.Budget" class="control-label">@Localizer["Бюджет:"]</h5>
                                 <input asp-for="Department.Budget" class="form-control" />
                                 <span asp-validation-for="Department.Budget" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Department.StartDate" class="control-label">@Localizer["Дата Начала:"]</label>
+                                <h5 asp-for="Department.StartDate" class="control-label">@Localizer["Дата Начала:"]</h5>
                                 <input asp-for="Department.StartDate" class="form-control" />
                                 <span asp-validation-for="Department.StartDate" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Department.RowVersion" class="control-label">@Localizer["Версия строки:"]</label>
+                                <h5 asp-for="Department.RowVersion" class="control-label">@Localizer["Версия строки:"]</h5>
                                 <input asp-for="Department.RowVersion" class="form-control" />
                                 <span asp-validation-for="Department.RowVersion" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="Department.Administrator" class="control-label">@Localizer["Администратор:"]</label>
+                                <h5 asp-for="Department.Administrator" class="control-label">@Localizer["Администратор:"]</h5>
                                 <input asp-for="Department.Administrator" class="form-control" />
                                 <span asp-validation-for="Department.Administrator" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <input type="submit" value="Create" class="btn btn-primary" />
+                                <input type="submit" value="Create" class="btn btn-primary btn-lg btn-block" />
                             </div>
                         </form>
                     </div>
