--- a/Pages/User/Edit.cshtml
+++ b/Pages/User/Edit.cshtml
@@ -18,47 +18,47 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Instructors.ID" />
             <div class="form-group">
-                <label asp-for="Instructors.LastName" class="control-label">@Localizer["Фамилия:"]</label>
+                <h5 asp-for="Instructors.LastName" class="control-label">@Localizer["Фамилия:"]</h5>
                 <input asp-for="Instructors.LastName" class="form-control" />
                 <span asp-validation-for="Instructors.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.FirstMidName" class="control-label">@Localizer["Имя:"]</label>
+                <h5 asp-for="Instructors.FirstMidName" class="control-label">@Localizer["Имя:"]</h5>
                 <input asp-for="Instructors.FirstMidName" class="form-control" />
                 <span asp-validation-for="Instructors.FirstMidName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.HireDate" class="control-label">@Localizer["Дата Найма:"]</label>
+                <h5 asp-for="Instructors.HireDate" class="control-label">@Localizer["Дата Найма:"]</h5>
                 <input asp-for="Instructors.HireDate" class="form-control" />
                 <span asp-validation-for="Instructors.HireDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.Age" class="control-label">@Localizer["Возраст:"]</label>
+                <h5 asp-for="Instructors.Age" class="control-label">@Localizer["Возраст:"]</h5>
                 <input asp-for="Instructors.Age" class="form-control" />
                 <span asp-validation-for="Instructors.Age" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.Country" class="control-label">@Localizer["Страна:"]</label>
+                <h5 asp-for="Instructors.Country" class="control-label">@Localizer["Страна:"]</h5>
                 <input asp-for="Instructors.Country" class="form-control" />
                 <span asp-validation-for="Instructors.Country" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.City" class="control-label">@Localizer["Город:"]</label>
+                <h5 asp-for="Instructors.City" class="control-label">@Localizer["Город:"]</h5>
                 <input asp-for="Instructors.City" class="form-control" />
                 <span asp-validation-for="Instructors.City" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.Email" class="control-label">@Localizer["Почта:"]</label>
+                <h5 asp-for="Instructors.Email" class="control-label">@Localizer["Почта:"]</h5>
                 <input asp-for="Instructors.Email" class="form-control" />
                 <span asp-validation-for="Instructors.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.AboutMe" class="control-label">@Localizer["О себе:"]</label>
+                <h5 asp-for="Instructors.AboutMe" class="control-label">@Localizer["О себе:"]</h5>
                 <input asp-for="Instructors.AboutMe" class="form-control" />
                 <span asp-validation-for="Instructors.AboutMe" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Instructors.OfficeAssignment.Location" class="control-label">@Localizer["Местоположение"]</label>
+                <h5 asp-for="Instructors.OfficeAssignment.Location" class="control-label">@Localizer["Местоположение"]</h5>
                 <input asp-for="Instructors.OfficeAssignment.Location" class="form-control" />
                 <span asp-validation-for="Instructors.OfficeAssignment.Location" class="text-danger" />
             </div>
