--- a/Pages/User/Details.cshtml
+++ b/Pages/User/Details.cshtml
@@ -10,9 +10,9 @@
 
 <h1>@Localizer["Подробности"]</h1>
 
-@*<p>
-    <a asp-page="Create">@Localizer["Создать"]</a> это создание пользователя, а нужно компании
-</p>*@
+<p>
+    <a asp-page="Create">@Localizer["Создать"]</a> @*это создание пользователя, а нужно компании*@
+</p>
 
 <div>
     <h4>@Localizer["Пользователь"]</h4>
