--- a/Pages/Company/Edit.cshtml
+++ b/Pages/Company/Edit.cshtml
@@ -39,21 +39,21 @@
                                 </div>
                                 <div class="form-group">
                                     <h5 asp-for="Company.Thematics" class="control-label">Тематика:</h5>
-                                    <input asp-for="Company.Thematics" class="form-control" />
+                                    <select asp-for="Company.Thematics" class="form-control" aria-label="Default select example">
+                                        <option selected>@Localizer["Выберите тематику вашей компании"]</option>
+                                        <option value="1">@Localizer["Образование"]</option>
+                                        <option value="2">@Localizer["Животные"]</option>
+                                        <option value="3">@Localizer["Права человека"]</option>
+                                        <option value="4">@Localizer["Природа"]</option>
+                                        <option value="5">@Localizer["Культура"]</option>
+                                        <option value="6">@Localizer["Игра"]</option>
+                                        <option value="7">@Localizer["Другое"]</option>
+                                    </select>
                                     <span asp-validation-for="Company.Thematics" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <h5 asp-for="Company.Bonus" class="control-label">Бонус:</h5>
-                                <select asp-for="Company.Thematics" class="form-control" aria-label="Default select example">
-                                    <option selected>@Localizer["Выберите тематику вашей компании"]</option>
-                                    <option value="1">@Localizer["Образование"]</option>
-                                    <option value="2">@Localizer["Животные"]</option>
-                                    <option value="3">@Localizer["Права человека"]</option>
-                                    <option value="4">@Localizer["Природа"]</option>
-                                    <option value="5">@Localizer["Культура"]</option>
-                                    <option value="6">@Localizer["Игра"]</option>
-                                    <option value="7">@Localizer["Другое"]</option>
-                                </select>
+                                    <input asp-for="Company.Bonus" class="form-control" />
                                     <span asp-validation-for="Company.Bonus" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
