--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -19,7 +19,7 @@
     </div>
 </form>
 <br />
-<a type="button" class="btn btn-danger" asp-page="Create">@Localizer["Создать"]</a>
+<a href="/Company/Create.cshtml" type="button" class="btn btn-danger">@Localizer["Создать"]</a>
 <br />
 <br />
 <h3>@Localizer["Компании с самым большим рейтингом"]</h3>
@@ -30,6 +30,7 @@
             <tr>
                 <th>@Localizer["Название"]</th>
                 <th>@Localizer["Рейтинг"]</th>
+                <th>@Localizer["Описание"]</th>
                 <th></th>
             </tr>
         </thead>
@@ -47,6 +48,9 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Rating)
+                    </td>
+                    <td>
+                        <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Подробности"]</a>
                     </td>
                     <td>
                         @{
@@ -70,6 +74,7 @@
             <tr>
                 <th>@Localizer["Название"]</th>
                 <th>@Localizer["Обнавленные компании"]</th>
+                <th>@Localizer["Описание"]</th>
                 <th></th>
             </tr>
         </thead>
@@ -87,6 +92,9 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Rating)
+                    </td>
+                    <td>
+                        <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Подробности"]</a>
                     </td>
                     <td>
                         @{
@@ -109,7 +117,7 @@
         <thead>
             <tr>
                 <th>@Localizer["Тэги"]</th>
-                <th></th>
+                <th>@Localizer["Описание"]</th>
                 <th></th>
             </tr>
         </thead>
@@ -124,6 +132,9 @@
                 <tr class="@selectedRow">
                     <td>
                         @Html.DisplayFor(modelItem => item.Tags)
+                    </td>
+                    <td>
+                        <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Подробности"]</a>
                     </td>
                     <td>
                         @{
@@ -164,6 +175,9 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.News)
+                    </td>
+                    <td>
+                        <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Подробности"]</a>
                     </td>
                     <td>
                         @{
