--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">@Localizer["Компании"]</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Ads/Index">@Localizer["Объявления"]</a>
                         </li>
                         <li class="nav-item">
@@ -34,7 +34,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Departments/Index">@Localizer["Отделы"]</a>
-                        </li>
+                        </li>*@
                         <li class="nav-item">
                             <button id="theme-button" type="button" name="Topic" class="form-control">@Localizer["Сменить тему"]</button>
                         </li>
@@ -59,6 +59,7 @@
             <a asp-area="" asp-page="/About">@Localizer["Информация"]</a>
         </div>
     </footer>
+}
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
