--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -29,7 +29,11 @@
         <thead>
             <tr>
                 <th>@Localizer["Название"]</th>
-                <th>@Localizer["Рейтинг"]</th>
+                <th>
+                    <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort">
+                        @Html.DisplayNameFor(model => model.Company[0].Rating)
+                    </a>
+                </th>
                 <th></th>
             </tr>
         </thead>
@@ -47,14 +51,6 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Rating)
-                    </td>
-                    <td>
-                        @{
-                            foreach (var company in item.UserAssignments)
-                            {
-                                @company.Company.Title @:  @company.Company.Rating <br />
-                            }
-                        }
                     </td>
                 </tr>
             }
@@ -62,14 +58,18 @@
     </table>
 </div>
 
-<h3>@Localizer["Обнавленные компании"]</h3>
+<h3>@Localizer["Обновленные компании"]</h3>
 <br />
 <div class="table-responsive">
     <table class="table table-hover">
         <thead>
             <tr>
                 <th>@Localizer["Название"]</th>
-                <th>@Localizer["Обнавленные компании"]</th>
+                <th>
+                    <a asp-page="./Index" asp-route-sortOrder="@Model.DateSort">
+                        @Html.DisplayNameFor(model => model.Company[0].EnrollmentDate)
+                    </a>
+                </th>
                 <th></th>
             </tr>
         </thead>
@@ -87,14 +87,6 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Rating)
-                    </td>
-                    <td>
-                        @{
-                            foreach (var company in item.UserAssignments)
-                            {
-                                @company.Company.Title @:  @company.Company.Rating <br />
-                            }
-                        }
                     </td>
                 </tr>
             }
@@ -123,14 +115,6 @@
                 <tr class="@selectedRow">
                     <td>
                         @Html.DisplayFor(modelItem => item.Tags)
-                    </td>
-                    <td>
-                        @{
-                            foreach (var company in item.UserAssignments)
-                            {
-                                @company.Company.Tags <br />
-                            }
-                        }
                     </td>
                 </tr>
             }
@@ -163,14 +147,6 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.News)
-                    </td>
-                    <td>
-                        @{
-                            foreach (var company in item.UserAssignments)
-                            {
-                                @company.Company.Topic @:  @company.Company.News <br />
-                            }
-                        }
                     </td>
                 </tr>
             }
