--- a/Pages/User/Create.cshtml
+++ b/Pages/User/Create.cshtml
@@ -17,42 +17,42 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <h5 asp-for="Instructor.LastName" class="control-label">@Localizer["Фамилия:"]</h5>
+                <h5 asp-for="Instructor.LastName" class="control-label">@Localizer["Фамилия"]</h5>
                 <input asp-for="Instructor.LastName" class="form-control" />
                 <span asp-validation-for="Instructor.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <h5 asp-for="Instructor.FirstMidName" class="control-label">@Localizer["Имя:"]</h5>
+                <h5 asp-for="Instructor.FirstMidName" class="control-label">@Localizer["Имя"]</h5>
                 <input asp-for="Instructor.FirstMidName" class="form-control" />
                 <span asp-validation-for="Instructor.FirstMidName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <h5 asp-for="Instructor.HireDate" class="control-label">@Localizer["Дата Найма:"]</h5>
+                <h5 asp-for="Instructor.HireDate" class="control-label">@Localizer["Дата Найма"]</h5>
                 <input asp-for="Instructor.HireDate" class="form-control" />
                 <span asp-validation-for="Instructor.HireDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <h5 asp-for="Instructor.Age" class="control-label">@Localizer["Возраст:"]</h5>
+                <h5 asp-for="Instructor.Age" class="control-label">@Localizer["Возраст"]</h5>
                 <input asp-for="Instructor.Age" class="form-control" />
                 <span asp-validation-for="Instructor.Age" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <h5 asp-for="Instructor.Country" class="control-label">@Localizer["Страна:"]</h5>
+                <h5 asp-for="Instructor.Country" class="control-label">@Localizer["Страна"]</h5>
                 <input asp-for="Instructor.Country" class="form-control" />
                 <span asp-validation-for="Instructor.Country" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <h5 asp-for="Instructor.City" class="control-label">@Localizer["Город:"]</h5>
+                <h5 asp-for="Instructor.City" class="control-label">@Localizer["Город"]</h5>
                 <input asp-for="Instructor.City" class="form-control" />
                 <span asp-validation-for="Instructor.City" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <h5 asp-for="Instructor.Email" class="control-label">@Localizer["Почта:"]</h5>
+                <h5 asp-for="Instructor.Email" class="control-label">@Localizer["Почта"]</h5>
                 <input asp-for="Instructor.Email" class="form-control" />
                 <span asp-validation-for="Instructor.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <h5 asp-for="Instructor.AboutMe" class="control-label">@Localizer["О себе:"]</h5>
+                <h5 asp-for="Instructor.AboutMe" class="control-label">@Localizer["О себе"]</h5>
                 <input asp-for="Instructor.AboutMe" class="form-control" />
                 <span asp-validation-for="Instructor.AboutMe" class="text-danger"></span>
             </div>
