--- a/Pages/Company/Edit.cshtml
+++ b/Pages/Company/Edit.cshtml
@@ -41,13 +41,13 @@
                                     <h5 asp-for="Company.Thematics" class="control-label">Тематика:</h5>
                                     <select asp-for="Company.Thematics" class="form-control" aria-label="Default select example">
                                         <option selected>@Localizer["Выберите тематику вашей компании"]</option>
-                                        <option value="1">@Localizer["Образование"]</option>
-                                        <option value="2">@Localizer["Животные"]</option>
-                                        <option value="3">@Localizer["Права человека"]</option>
-                                        <option value="4">@Localizer["Природа"]</option>
-                                        <option value="5">@Localizer["Культура"]</option>
-                                        <option value="6">@Localizer["Игра"]</option>
-                                        <option value="7">@Localizer["Другое"]</option>
+                                        <option>@Localizer["Образование"]</option>
+                                        <option>@Localizer["Животные"]</option>
+                                        <option>@Localizer["Права человека"]</option>
+                                        <option>@Localizer["Природа"]</option>
+                                        <option>@Localizer["Культура"]</option>
+                                        <option>@Localizer["Игра"]</option>
+                                        <option>@Localizer["Другое"]</option>
                                     </select>
                                     <span asp-validation-for="Company.Thematics" class="text-danger"></span>
                                 </div>
@@ -63,20 +63,20 @@
                                 </div>
                                 <div class="form-group">
                                     <h5 asp-for="Company.Images" class="control-label">Изобраение:</h5>
-                                    @*<div id="drop-area">
-                                            <div class="my-form">
-                                                <label asp-for="Company.Images" class="control-label"></label>
-                                                <p>@Localizer["Загрузите изображения с помощью диалога выбора файлов или перетащив нужные изображения в выделенную область"]</p>
-                                                <input asp-for="Company.Images" class="form-control" type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
-                                                <span asp-validation-for="Company.Images" class="text-danger"></span>
-                                                <label class="button" for="UploadFileSample.cs">@Localizer["Выбрать изображения"]</label>
-                                            </div>
-                                        </div>*@
+                                    <div id="drop-area">
+                                        <div class="my-form">
+                                            <label asp-for="Company.Images" class="control-label"></label>
+                                            <p>@Localizer["Загрузите изображения с помощью диалога выбора файлов или перетащив нужные изображения в выделенную область"]</p>
+                                            <input asp-for="Company.Images" class="form-control" type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
+                                            <span asp-validation-for="Company.Images" class="text-danger"></span>
+                                            <label class="button">@Localizer["Выбрать изображения"]</label>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <h5 asp-for="Company.Video" class="control-label">Видео:</h5>
-                                    <input asp-for="Company.Video" class="form-control" />
-                                    <span asp-validation-for="Company.Video" class="text-danger"></span>
+                                    @*<input asp-for="Company.Video" class="form-control" />
+                                    <span asp-validation-for="Company.Video" class="text-danger"></span>*@
                                 </div>
                                 <div class="form-group">
                                     <h5 asp-for="Company.Topic" class="control-label">Тема:</h5>
